package model;

public enum KategoriaPojazdu {
    A, B, C, CC, D, T, E
}
