package model;

public enum TypPojazdu {
    MOTOR, SAMOCHOD_OSOBOWY, AUTOBUS, SAMOCHOD_DOSTAWCZY, SAMOCHOD_CIEZAROWY, CIAGNIK_ROLNICZY
}
